--- a/pages_html/500.html
+++ b/pages_html/500.html
@@ -13,22 +13,28 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #ff4e4e; /* Solid color background for a strong impact */
-        color: #fff;
+        background-color: #060505; /* Solid color background for a strong impact */
+        color: #333;
       }
       .container {
         text-align: center;
         padding: 30px;
         background: rgba(0, 0, 0, 0.5);
         border-radius: 10px;
+        background: rgba(255, 255, 255, 0.9);
+        padding: 70px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
       .container h1 {
         font-size: 120px;
         margin: 0;
+        color: #c03838;
       }
       .container h2 {
         font-size: 36px;
         margin: 10px 0;
+        color: #ac3939;
       }
       .container p {
         font-size: 18px;
