--- a/pages_html/delete_successful.html
+++ b/pages_html/delete_successful.html
@@ -9,7 +9,7 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
+        background-color: #222;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -18,8 +18,8 @@
 
       .container {
         text-align: center;
-        background-color: #ffffff;
-        padding: 20px 40px;
+        background-color: #e6dede;
+        padding: 50px 40px;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
