--- a/pages_html/400.html
+++ b/pages_html/400.html
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: linear-gradient(to right, #ffdde1, #ee9ca7);
+        background: linear-gradient(to right, #060505, #060505);
         color: #333;
       }
       .container {
