--- a/pages_html/403.html
+++ b/pages_html/403.html
@@ -9,14 +9,21 @@
       body {
         font-family: Arial, sans-serif;
         text-align: center;
-        background-color: #f8d7da;
-        color: #721c24;
+        background-color: #060505;
+        color: #c4303f;
         margin: 0;
         padding: 0;
         height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+      div {
+        text-align: center;
+        background: rgba(217, 210, 210, 0.9);
+        padding: 100px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
       h1 {
         font-size: 3em;
