--- a/pages_html/411.html
+++ b/pages_html/411.html
@@ -13,12 +13,17 @@
         align-items: center;
         justify-content: center;
         height: 100vh;
-        background-color: #191f26;
-        color: #fff;
+        background-color: #060505;
+        color: #151313;
       }
       .container {
         text-align: center;
         max-width: 600px;
+        text-align: center;
+        background: rgba(223, 219, 219, 0.9);
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
       h1 {
         font-size: 5rem;
