--- a/pages_html/413.html
+++ b/pages_html/413.html
@@ -13,18 +13,24 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #ba5f57; /* Solid color background */
-        color: #fff;
+        background-color: #060505; /* Solid color background */
+        color: #222;
       }
       .container {
         text-align: center;
         padding: 30px;
-        background: rgba(0, 0, 0, 0.5);
+        /* background: rgba(0, 0, 0, 0.5); */
         border-radius: 10px;
+        text-align: center;
+        background: rgba(237, 235, 235, 0.9);
+        padding: 70px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
       .container h1 {
         font-size: 120px;
         margin: 0;
+        color: #c24539;
       }
       .container h2 {
         font-size: 36px;
