--- a/pages_html/501.html
+++ b/pages_html/501.html
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4);
+        background: linear-gradient(to right, #1a1a1d, #a1abbe, #151a19);
         color: #333;
       }
       .container {
