--- a/pages_html/408.html
+++ b/pages_html/408.html
@@ -58,7 +58,7 @@
       <h1>408</h1>
       <h2>Request Timeout</h2>
       <p>
-        The server timed out waiting for your request.<br />
+        The server timed out processing your request.<br />
         Please check your connection and try again.
       </p>
     </div>
