--- a/pages_html/408.html
+++ b/pages_html/408.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>500 Internal Server Error</title>
+    <title>408 Request Timeout</title>
     <style>
       body {
         font-family: "Arial", sans-serif;
@@ -13,46 +13,54 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #ff4e4e; /* Solid color background for a strong impact */
-        color: #fff;
+        background-color: #060505;
+
+        color: #333;
       }
       .container {
         text-align: center;
-        padding: 30px;
-        background: rgba(0, 0, 0, 0.5);
+        padding: 100px;
+        background: rgba(225, 220, 220, 0.95);
         border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       }
       .container h1 {
-        font-size: 120px;
+        font-size: 100px;
         margin: 0;
+        color: #e74c3c;
       }
       .container h2 {
         font-size: 36px;
         margin: 10px 0;
+        color: #444;
       }
       .container p {
         font-size: 18px;
         margin: 20px 0;
+        color: #666;
       }
       .container a {
         text-decoration: none;
-        color: #ff4e4e;
-        background-color: #fff;
-        padding: 10px 20px;
+        color: #fff;
+        background-color: #e74c3c;
+        padding: 12px 24px;
         border-radius: 5px;
         font-size: 18px;
         transition: background-color 0.3s ease;
       }
       .container a:hover {
-        background-color: #ffc2c2;
+        background-color: #c0392b;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>500</h1>
-      <h2>Internal Server Error</h2>
-      <p>Oops! Something went wrong on our end.<br />Please try again later.</p>
+      <h1>408</h1>
+      <h2>Request Timeout</h2>
+      <p>
+        The server timed out processing your request.<br />
+        Please check your connection and try again.
+      </p>
     </div>
   </body>
 </html>
