fix problems: fix if file not found in post (content-length == 0) ✅

--- a/pages_html/411.html
+++ b/pages_html/411.html
@@ -36,8 +36,7 @@
       <h1>411</h1>
       <p><strong>Length Required</strong></p>
       <p>
-        The server requires the request to include either a
-        <code>Content-Length</code> or <code>Transfer-Encoding</code> header.
+        The server requires the request to include <code>Content-Length != 0</code>
       </p>
       <p>Please correct your request and try again.</p>
     </div>
